# utilars

./: .cargo-crap.json  .cargo-crap.toml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: cli.rs
openapi/: utila.v2.json  utila.v2.meta.json
openspec/changes/add-utila-rust-client/: design.md  proposal.md  tasks.md
openspec/changes/add-utila-rust-client/specs/utila-client/: spec.md
openspec/changes/archive/2026-06-22-normalize-resource-id-contract/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-normalize-resource-id-contract/specs/utila-client/: spec.md
openspec/specs/utila-client/: spec.md
src/: address_book.rs  amount.rs  asset_cache.rs  assets.rs  auth.rs  balances.rs  client.rs  error.rs  generated.rs  ids.rs  kms.rs  lib.rs  macros.rs  networks.rs  resource.rs  transactions.rs  tx_details.rs  vaults.rs  wallets.rs  webhook.rs  webhook_event.rs
src/transactions/: api.rs  details.rs  evm.rs  mod.rs  solana.rs  stellar.rs  sui.rs  transfer.rs  tron.rs  xrpl.rs
tests/: address_book.rs  assets.rs  auth.rs  balances.rs  networks.rs  test_key.pem  transactions.rs  vaults.rs  wallets.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
