[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
progenitor = "0.14"
openapiv3 = "2.2"
serde_json = "1"
anyhow = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"
ureq = { version = "2", features = ["json"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
